--- a/src/template.html
+++ b/src/template.html
@@ -65,7 +65,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a third year undergraduate at IIT Kanpur majoring in Electrical Engineering. 
+                I am a Senior Undergraduate at IIT Kanpur majoring in Electrical Engineering. 
                 I am passionate about web development and using it to build some cool projects. 
                 I love learning new things and using them to build something.
               </p>
@@ -240,7 +240,7 @@
           <a  rel="noreferrer"
           target="_blank"
           class="cta-btn cta-btn--contact"
-          href="mailto:Sahilk@iitk.ac.in">Drop a Mail</a
+          href="mailto:Sahilkhaniitk@gmail.com">Drop a Mail</a
           >
         </div>
       </div>
@@ -254,7 +254,7 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/sahil-2/" target="_blank">
+          <a href="https://www.linkedin.com/in/sahiliitk/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a href="https://www.facebook.com/SAHILKHAN2312000131/" target="_blank">
@@ -263,7 +263,7 @@
           <a href="https://github.com/Sahil-2" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-          <a href="mailto:Sahilk@iitk.ac.in" target="_blank">
+          <a href="mailto:Sahilkhaniitk@gmail.com" target="_blank">
             <i class="fa fa-envelope fa-inverse"></i>
           </a>
         </div>
