--- a/src/template.html
+++ b/src/template.html
@@ -65,7 +65,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a Senior Undergraduate at IIT Kanpur majoring in Electrical Engineering. 
+                I am a 2022 graduate from Electrical Engineering department of IIT Kanpur.
+                I am currently working at Ola Cabs.
                 I am passionate about web development and using it to build some cool projects. 
                 I love learning new things and using them to build something.
               </p>
