--- a/src/template.html
+++ b/src/template.html
@@ -69,6 +69,7 @@
                 I am currently working at Ola Cabs.
                 I am passionate about web development and using it to build some cool projects. 
                 I love learning new things and using them to build something.
+                I have experience in technologies like JavaScript, React, Node, Express, PostgreSQL and C/C++.
               </p>
               <p class="about-wrapper__info-text">
                 My hobbies include singing and listening to music and podcasts. 
